--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 .DS_Store
+/Es141/nbproject/private/
+/Es141/build/
+/Es142/nbproject/private/
+/Es142/build/
+/Es145/nbproject/private/
+/Es145/build/
+/Es148/nbproject/private/
+/Es148/build/
+/Es150/nbproject/private/
+/Es150/build/
