added some more files

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,21 @@
 /Es148/build/
 /Es150/nbproject/private/
 /Es150/build/
+/Es117/nbproject/private/
+/Es117/build/
+/Es151/nbproject/private/
+/Es152/nbproject/private/
+/Tehc/nbproject/private/
+/Tehc/build/
+/Test/nbproject/private/
+/Test/build/
+/Fibo/nbproject/private/
+/Fibo/build/
+/Factorial/nbproject/private/
+/Factorial/build/
+/Factorization/nbproject/private/
+/Factorization/build/
+/Mcm/nbproject/private/
+/Mcm/build/
+/Mcd/nbproject/private/
+/Mcd/build/
