added Es163, Es164, Es165, Es177

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,11 @@
 /Es156/build/
 /Es157/nbproject/private/
 /Es158/nbproject/private/
+/Es163/nbproject/private/
+/Es163/build/
+/Es164/nbproject/private/
+/Es164/build/
+/Es165/nbproject/private/
+/Es165/build/
+/Es177/nbproject/private/
+/Es177/build/
