added Es1Disp2, Es2Disp2

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,7 @@
 /Es165/build/
 /Es177/nbproject/private/
 /Es177/build/
+/Es1Disp2/nbproject/private/
+/Es1Disp2/build/
+/Es2Disp2/nbproject/private/
+/Es2Disp2/build/
