added Es3Disp2, Es5Disp2, Es6Disp2

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,9 @@
 /Es1Disp2/build/
 /Es2Disp2/nbproject/private/
 /Es2Disp2/build/
+/Es3Disp2/nbproject/private/
+/Es3Disp2/build/
+/Es5Disp2/nbproject/private/
+/Es5Disp2/build/
+/Es6Disp2/nbproject/private/
+/Es6Disp2/build/
