--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,9 @@
 /Es5Disp2/build/
 /Es6Disp2/nbproject/private/
 /Es6Disp2/build/
+/Es4Disp2/nbproject/private/
+/Es4Disp2/build/
+/Es7Disp2/nbproject/private/
+/Es7Disp2/build/
+/Es8Disp2/nbproject/private/
+/Es8Disp2/build/
