added other files

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,12 @@
 /Es7Disp2/build/
 /Es8Disp2/nbproject/private/
 /Es8Disp2/build/
+/Es3Disp3/nbproject/private/
+/Es3Disp3/build/
+/Es4Disp3/nbproject/private/
+/Es6Disp3/nbproject/private/
+/Es6Disp3/build/
+/Es9Disp3/nbproject/private/
+/Es9Disp3/build/
+/Test3/nbproject/private/
+/Test3/build/
